2010-02-11  Matthew Mundell <matthew.mundell@intevation.de>

	* omp/openvas_server.h: Add extern for C++.

2010-02-11  Matthew Mundell <matthew.mundell@intevation.de>

	* omp/omp.h, omp.xsl.h: Add externs for C++.

2010-02-04  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/openvas_logging.c (openvas_syslog_func): Applying patch from
	Stephan Kleine, fixing bug #1272 (http://bugs.openvas.org/1272).

2010-02-04  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.4.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-02-04  Michael Wiegand <michael.wiegand@intevation.de>

	* MANIFEST: Added missing files.

2010-02-04  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-libraries 3.0.3 release.

	* CHANGES: Updated.

	* VERSION: Set to 3.0.3.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-02-04  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/openvas_auth.c (openvas_authenticate): Minor doc, added TODO
	about possible memleak.

2010-01-29  Chandrashekhar B <bchandra@secpod.com>

	* nasl/nasl_crypto.c (nasl_ntlmv1_hash, nasl_lm_owf_gen)
	(nasl_ntv2_owf_gen, nasl_ntlmv2_hash): Addressed compiler warnings.

2010-01-28  Matthew Mundell <matthew.mundell@intevation.de>

	* misc/openvas_logging.c: Revert last change.

	* ChangeLog: Neaten entry, flush whitespace.

2010-01-28  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Straightened up log config handling.

	* misc/openvas_logging.c (openvas_syslog_func): [SYSLOG_SUPPORT]
	Guarded.
	(openvas_syslog_func): Changed name of user data parameter and doc.
	(openvas_log_func): Changed user data parameter, doc, removed
	looping over list to determine the default (will not be used anyway).
	(setup_log_handlers): Changed semantics of user data parameter,
	instead of a more or less unused list, pass the single matching
	openvas_logging_t struct. Set default handler differently.
