@@ -1,10 +1,17 @@
+2010-02-15  Felix Wolfsteller <felix.wolfsteller@intevation.de>
+
+	* nasl/CMakeLists.txt: Link the standalone nasl interpreter dynamically.
+	Move linkage commands to the static nasl library.
+
+	* ChangeLog: Corrected path.
+
 2010-02-11  Matthew Mundell <matthew.mundell@intevation.de>
 
 	* omp/openvas_server.h: Add extern for C++.
 
 2010-02-11  Matthew Mundell <matthew.mundell@intevation.de>
 
-	* omp/omp.h, omp.xsl.h: Add externs for C++.
+	* omp/omp.h, omp/xml.h: Add externs for C++.
 
 2010-02-04  Felix Wolfsteller <felix.wolfsteller@intevation.de>
 
